# sparrow_vs

./: CMakeLists.txt  README.md
sparrow/: CMakeLists.txt  sparrow.c  sparrow.h
sparrow/compiler/: compiler.c  compiler.h  debug.c  debug.h
sparrow/gc/: gc.c
sparrow/include/: common.h  unicodeUtf8.c  utils.c  utils.h
sparrow/object/: class.c  class.h  header_obj.c  header_obj.h  meta_obj.c  meta_obj.h  obj_fn.c  obj_fn.h  obj_list.c  obj_map.c  obj_map.h  obj_range.h  obj_string.c  obj_string.h  obj_thread.c  obj_thread.h
sparrow/parser/: parser.c  parser.h
sparrow/vm/: core.c  opcode.inc  vm.c  vm.h
